force-app/main/default/objects/RLM_Config_Engine_Binding__mdt/RLM_Config_Engine_Binding__mdt.object-meta.xml
<CustomObject>
    <label>RLM Config Engine Binding</label>
    <pluralLabel>RLM Config Engine Bindings</pluralLabel>
    <description>Maps the configurator to the RLM engine invocable action names in this org. Lets an org whose engine services are named differently (a namespace or a local prefix) point the panel at them without editing Apex.</description>
</CustomObject>