force-app/main/default/objects/RLM_Config_Engine_Binding__mdt/fields/Options_Action__c.field-meta.xml
<CustomField>
    <fullName>Options_Action__c</fullName>
    <label>Options Action</label>
    <type>Text</type>
    <length>255</length>
    <description>Invocable action that returns a line’s configurable attribute options. Default: ProductAttributeService.</description>
    <inlineHelpText>Invocable action that returns a line’s configurable attribute options. Default: ProductAttributeService.</inlineHelpText>
</CustomField>