force-app/main/default/objects/RLM_Config_Engine_Binding__mdt/fields/Read_Action__c.field-meta.xml
<CustomField>
    <fullName>Read_Action__c</fullName>
    <label>Read Action</label>
    <type>Text</type>
    <length>255</length>
    <description>Invocable action that reads back saved attribute values. Default: ProductAttributeReadService.</description>
    <inlineHelpText>Invocable action that reads back saved attribute values. Default: ProductAttributeReadService.</inlineHelpText>
</CustomField>