force-app/main/default/objects/RLM_Config_Engine_Binding__mdt/fields/Save_Action__c.field-meta.xml
<CustomField>
    <fullName>Save_Action__c</fullName>
    <label>Save Action</label>
    <type>Text</type>
    <length>255</length>
    <description>Invocable action that persists attribute selections. Default: ProductAttributeSaveService.</description>
    <inlineHelpText>Invocable action that persists attribute selections. Default: ProductAttributeSaveService.</inlineHelpText>
</CustomField>